# pythonkc.org

./: .flake8  .gitignore  README.md  app.css  contributing.md  package-lock.json  pyproject.toml  tailwind.config.js
.github/workflows/: ci.yaml
deploy/: dev.sh  nginx.conf.template  prod.sh  pykc.nginx.conf  pykc.service
documentation/: run_doctests.py  serve.py
scripts/: gendevenv.py  gendevenvhttp.py  gendevenvwithproxy.py  genprodenv.py  gentestenv.py  make_organizer.py  seed_events.py  seed_members.py
src/pykc/: __init__.py  constants.py  exceptions.py  types.py
src/pykc/common/: __init__.py  appenv.py  logs.py  timestamps.py
src/pykc/dl/: __init__.py  db.py  from_.py  tables.py  where.py
src/pykc/dl/crud/: __init__.py  events.py  factories.py  members.py
src/pykc/dl/schemas/: __init__.py  events.py  helpers.py  members.py
src/pykc/dl/schemas/common/: columns.py  constraints.py
src/pykc/pl/: __init__.py  auth.py  dtos.py  req_helpers.py  res_helpers.py  routes.py  templating.py  utils.py  ws_helpers.py
src/pykc/pl/static/: editing.mjs  headers.mjs  main.css  modals.mjs  page-state.mjs  resource-content.mjs  sockets.mjs  utils.mjs
src/pykc/pl/static/common/: search.mjs
src/pykc/pl/static/members/: join.mjs  login.mjs
src/pykc/pl/static/pages/events/: event_details.mjs  event_management.mjs  events_list.mjs  recurring_details.mjs  venues_list.mjs
src/pykc/pl/static/pages/members/: account.mjs  details.mjs  discord_login.mjs  join.mjs  list.mjs  login.mjs
src/pykc/pl/templates/events/: event_details.html.jinja  events_list.html.jinja  manager_dashboard.html.jinja  venue_details.html.jinja  venues_list.html.jinja
src/pykc/pl/templates/pykc/: about.html.jinja  base.html.jinja  index.html.jinja  root.html.jinja
src/pykc/pl/templates/pykc/members/: account.html.jinja  details.html.jinja  discord_login.html.jinja  index.html.jinja  join.html.jinja  login.html.jinja
src/pykc/pl/validation/: __init__.py  constants.py  contracts.py  transforms.py  validations.py
src/pykc/pl/views/: __init__.py
src/pykc/pl/views/events/: api.py  live.py  pages.py
src/pykc/pl/views/members/: __init__.py  api.py  live.py  oauth.py  pages.py
src/pykc/sl/: __init__.py  acl.py  errors.py  fetch.py  pubsub.py  scheduling.py  structs.py  tokens.py
test/: __init__.py  conftest.py  helpers.py  mock_data.py  seed.py
test/integration/: event_management_test.py  members_test.py
test/unit/dl/: constraints_test.py
test/unit/sl/: event_scheduling_test.py
